--- a/flask_app/templates/edit_recipe.html
+++ b/flask_app/templates/edit_recipe.html
@@ -20,8 +20,8 @@
             <div class="content-left flex-1">
                 <div class="form-row my-4">
                     <div class="form-group col-md-12 d-flex gap-4">
-                      <label for="Nname">Name</label>
-                      <input type="text" class="form-control" name="Nname" value="{{ specific_recipe.name }}" id="Nname">
+                      <label for="name">Name</label>
+                      <input type="text" class="form-control" name="name" value="{{ specific_recipe.name }}" id="name">
                     </div>
                 </div>
                 <div class="form-row my-4">
