--- a/flask_app/templates/show_recipe.html
+++ b/flask_app/templates/show_recipe.html
@@ -30,7 +30,7 @@
             </div>
             <div class="date d-flex">
                 <h6>Date Made:</h6>
-                <p>{{specific_recipe.date}}</p>
+                <p>{{date_formatting}}</p> 
             </div>
         </div>
 {%endblock%}
