--- a/flask_app/templates/new_recipe.html
+++ b/flask_app/templates/new_recipe.html
@@ -48,11 +48,11 @@
                     <p>Under 30 minutes?</p>
                     <div class="radio-input d-flex">
                         <div class="form-group col-md-12">
-                            <input type="radio" class="form-control" name="under_30" value="yes"  id="yes">
+                            <input type="radio"  name="under_30" value="yes"  id="yes">
                             <label  for="yes">Yes</label>
                         </div>
                         <div class="form-group col-md-12">
-                            <input type="radio" class="form-control" name="under_30" value="no" id="no">
+                            <input type="radio"  name="under_30" value="no" id="no">
                             <label  for="no">No</label>
                         </div>
                     </div>
